tests/errors/consts/assignment_to_const.ne
function main(): int32
{
    cosnt a: int16 = 1;
    a = 20;
}
